fixes line 26 in css to display:none;, adds h2 css to align text-centered, applys .slideToggle to all items under .results class in js. brings master branch up to date with gh-branch.

--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@
 }
 
 .autoSelect {
-  display: no
+  display: none
 }
 
 .excited {
@@ -46,6 +46,10 @@
 
 #bianary {
   display: none;
+}
+
+h1 {
+  text-align: center;
 }
 
 h2 {
